# AI-Enabled-mobile-robot-with-a-5-DOF-robotic-manipulator-

./: README.md
nrf control/: Raspberry_pi_reviever.py  Reciever_code.cpp  Transmitter_code.cpp
odrive_driver/: package.xml  setup.py
odrive_driver/launch/: odrive_driver.py
odrive_driver/odrive_driver/: mock_pub.py  odrive_config.py  odrive_odom_pub.py  odrive_twist_driver.py
src/robot_arm_description/: CMakeList.txt  package.xml
src/robot_arm_description/config/: ros2_controller.yaml
src/robot_arm_description/urdf/: arm.urdf.xacro
src/robot_bringup/: package.xml
src/robot_bringup/config/: ekf.yaml  gz_ros_topic_bridge.yaml  nav2_config.yaml  pointCloud_to_laserScan_config.yaml  teleop_config.yaml  twist_mux_config.yaml
src/robot_bringup/launch/: bringup_launch.py  full_system_launch.py  robot_computer_launch.py  robot_gazebo_launch.py  robot_rpi_launch.py
src/robot_description/: CMakeLists.txt
src/robot_description/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro  robot.xacro
src/robot_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/robot_moveit_config/launch/: move_group_launch.py
src/twist_mux_py/: package.xml  setup.cfg  setup.py
src/twist_mux_py/twist_mux_py/: twist_mux_py.py
src/unilidar_driver/unitree_lidar_ros2/: package.xml
src/unilidar_driver/unitree_lidar_ros2/include/: unitree_lidar_ros2.h
src/unilidar_driver/unitree_lidar_ros2/launch/: launch.py
