<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_arm_description</name>
  <version>0.0.1</version>

  <description>5 DOF Arm Description</description>

  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>